--- a/Act 2.1/index.html
+++ b/Act 2.1/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deportive Clothes </title>
+    <title>NBA Store </title>
 </head>
 <body>
-    <h1>Deportive Clothes</h1>
-    <p>Tienda dedicada al comercio de ropa, zapatillas y accesorios de deporte.  </p>
+    <h1>NBA Store</h1>
+    <p>Tienda dedicada al comercio de ropa, zapatillas y accesorios de deporte.</p>
     <img src="https://image-cdn.hypb.st/https%3A%2F%2Fhypebeast.com%2Fimage%2F2015%2F04%2Fa-closer-look-at-the-nike-kobe-x-elite-grand-purple-2.jpg?q=75&w=800&cbr=1&fit=max" 
     alt="kobe10">
     <div>
