Diseño de pagina web simple

--- a/Act 2.1/index.html
+++ b/Act 2.1/index.html
@@ -10,7 +10,7 @@
     <h1>NBA Store</h1>
     <p>Tienda dedicada al comercio de ropa, zapatillas y accesorios de deporte.</p>
     <img src="https://image-cdn.hypb.st/https%3A%2F%2Fhypebeast.com%2Fimage%2F2015%2F04%2Fa-closer-look-at-the-nike-kobe-x-elite-grand-purple-2.jpg?q=75&w=800&cbr=1&fit=max" 
-    alt="kobe10elite">
+    alt="kobe10">
     <div>
         <ul>
             <li><a href="#">Zapatillas</a></li>
