--- a/Act 2.2/index.html
+++ b/Act 2.2/index.html
@@ -22,7 +22,7 @@
             <tr>
                 <td>Mochila Kyrie Irving</td>
                 <td>$80.000</td>
-                <td>Disponible</td>
+                <td>Disponible.</td>
             </tr>
             <tr>
                 <td>Polera Curry "USA 4" XL</td>
