--- a/Act 2.3/index.html
+++ b/Act 2.3/index.html
@@ -4,9 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tangananica</title>
 </head>
 <body>
-    
+    <h1>Tangananica</h1>
+    <table>
+        <thead>
+            <th scope="row">Trimestre</th>
+            <th scope="col">Ventas</th>
+            <th scope="col">gastos</th>
+            <th scope="col">Beneficios</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td scope="row">1</td>
+                <td>$15.000.000</td>
+                <td>$6.000.000</td>
+                <td>$9.000.000</td>
+            </tr>
+            <tr>
+                <td scope="row">2</td>
+                <td>$10.000.000</td>
+                <td>$4.000.000</td>
+                <td>$6.000.000</td>
+            </tr>
+            <tr>
+                <td scope="row">3</td>
+                <td>$20.000.000</td>
+                <td>$8.000.000</td>
+                <td>$12.000.000</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <td>Total</td>
+            <td>$45.000.000</td>
+            <td>$18.000.000</td>
+            <td>$27.000.000</td>
+        </tfoot>
+    </table>
 </body>
 </html>
